# MOSEK_EXAMPLE

./: CMakeLists.txt  README.md
.github/workflows/: test-on-ubuntu.yml  test-on-windows.yml
cmake/: FindMOSEK.cmake
tests/: CMakeLists.txt  test_mosek.cc
